# book-recommender

./: .env.example  .gitignore  FULL_DOCUMENTATION.md  README.md  pyproject.toml  requirements.txt
app/: app.py
chroma_db/51d8123b-3c6f-4d11-8929-5ff3bef3fc5a/: index_metadata.pickle
config/: config.py
data/: book_updated.csv  recomendaciones_libros_reales_1000.csv
pipeline/: build_pipeline.py  pipeline.py
src/: data_loader.py  prompt_template.py  recommender.py  vector_store.py
utils/: custom_exception.py  logger.py
