[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "book_recommender"
version = "0.1.0"
description = "A tool to recommend books using LLMs."
authors = [
    { name = "Bartolome Manobel" }
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]
include = [
    "app",
    "app.*",
    "config",
    "config.*",
    "pipeline",
    "pipeline.*",
    "src",
    "src.*",
    "utils",
    "utils.*",
]
